<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DivvyApp</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_deals_page">DealsPage</string>
    <string name="Login">Login</string>
    <string name="skip">Skip</string>
    <string name="timePick">Until when will you be at the mall? </string>
    <string name="timeLeft">This customer will leave the mall in: </string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="claimDeal">Request Match</string>
    <string name="completeDeal">Complete Deal</string>
    <string name="title_activity_data_sender">DataSender</string>
    <string name="title_activity_find_me_match">FindMeMatch</string>
    <string name="title_activity_complete_match">CompleteMatch</string>
    <string name="id">ID:</string>
    <string name="send">Send</string>
    <string name="claimedBy">ClaimedBy:</string>
    <string name="picture">Picture:</string>
    <string name="storeid">StoreID:</string>
    <string name="deadLine">deadLine:</string>
    <string name="image_button_delete">image_button_delete:</string>
    <string name="title_activity_add_deal">AddDeal</string>
    <string name="title_activity_chat_after_match">ChatAfterMatch</string>
    <string name="title_activity_store_page">StorePage</string>
    <string name="title_activity_add_new_deal">AddNewDeal</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_chat_history">ChatHistory</string>
    <string name="previous_chats">Previous Chats</string>
    <string name="other_user">Other User</string>
    <string name="deal_description">Deal Description</string>
    
</resources>