<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="com.main.divvyapp.DealsPage" >
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:weightSum="100" 
        android:background="#ff45">

        <TextView
            style="@style/AppBaseTheme"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="12.54"
            android:gravity="center_vertical"
            android:text="@string/id" />

        <TextView
            style="@style/AppBaseTheme"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="23"
            android:gravity="center_vertical"
            android:text="@string/claimedBy" />

        <TextView
            style="@style/AppBaseTheme"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="22"
            android:gravity="center_vertical"
            android:text="@string/picture" />

        <TextView
            style="@style/AppBaseTheme"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="22"
            android:gravity="center_vertical"
            android:text="@string/storeid" />
        
        <TextView
            style="@style/AppBaseTheme"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="22"
            android:gravity="center_vertical"
            android:text="@string/deadLine" />

    </LinearLayout>

    <ListView
        android:id="@+id/mainList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="#00000000"
        android:orientation="vertical" >
    </ListView>

</LinearLayout>